# tdx-tcb-evaluation-tool

./: Cargo.toml  README.md
src/: main.rs  utils.rs
